fixed spacing and added gregoland

--- a/src/routes/Entertainment/components/Intro/intro.module.scss
+++ b/src/routes/Entertainment/components/Intro/intro.module.scss
@@ -31,7 +31,7 @@
 
     .events {
         background-color: #00000050;
-        margin-top: 40px; 
+        margin-top: 10px; 
         max-width: 800px;
     }
 
