--- a/src/routes/Entertainment/entertainment.module.scss
+++ b/src/routes/Entertainment/entertainment.module.scss
@@ -5,7 +5,7 @@
 
 .introSection {
   color: black;
-  height: 100vh;
+  height: 140vh;
   width: 100%;
   display: flex;
   justify-content: center;
